--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                 <div class="absolute inset-0 bg-black opacity-50"></div>
             </div>
 
-            <div class="relative z-10">
+            <div class="relative z-10 container mx-auto">
                 <div class="inline-block bg-white/90 text-gray-800 rounded-lg px-4 py-2 mb-4 backdrop-blur-sm shadow-lg">
                     <p class="font-bold text-lg">蛍光灯の製造終了まであと <span id="countdown" class="text-red-600 font-black">...</span> 日</p>
                 </div>
-                <h1 class="text-4xl md:text-6xl md:leading-relaxed font-black leading-relaxed text-shadow">
+                <h1 class="text-4xl md:text-5xl md:leading-relaxed font-black leading-relaxed text-shadow">
                     貴社の蛍光灯、2027年に“交換品ゼロ”になるかもしれません。<br> LED切替の準備、進んでいますか？
                 </h1>
                 <p class="mt-6 max-w-3xl mx-auto text-lg leading-relaxed text-shadow-sm">
